--- a/main.html
+++ b/main.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>AccioJob</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <!-- Marquee Header -->
+  <marquee><h1>Welcome to Accio Jobs!</h1></marquee>
+
+  <!-- Blog Link -->
+  <h1><a href="https://acciojob.com/blog">Accio Job’s Blog</a></h1>
+
+  <!-- Articles -->
+  <h2>Articles</h2>
+
+  <!-- 1. Brute Force vs. Optimization -->
+  <div>
+    <img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fH4.0.3&q=80&w=2000" height="200px" alt="Brute Force Image">
+    <h3><a href="https://acciojob.com/blog/brute-force-vs-optimization">Brute Force vs. Optimization</a></h3>
+    <p>We can say that optimization is...</p>
+  </div>
+
+  <!-- 2. DSA vs. Competitive Programming -->
+  <div>
+    <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDIzfH4.0.3&q=80&w=2000" height="200px" alt="DSA Image">
+    <h3><a href="https://acciojob.com/blog/dsa-vs-competitive-programming">DSA vs. Competitive Programming</a></h3>
+    <p>Like in competitive programming?...</p>
+  </div>
+
+  <!-- 3. Complete Guide on FlexBox -->
+  <div>
+    <img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" height="200px" alt="FlexBox Image">
+    <h3><a href="https://acciojob.com/blog/complete-guide-on-flexbox">Complete Guide on FlexBox</a></h3>
+    <p>As a job seeker, you may wonder...</p>
+  </div>
 
 </body>
-
 </html>
